--- a/ReactorPhysics_Python/02.Macro.XS.421g/testH2OB.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testH2OB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
     "    'B11':  'B_011'\n",
     "    }\n",
     "    # Path to microscopic cross section data:\n",
-    "    micro_XS_path = '../01.Micro_Python'\n",
+    "    micro_XS_path = '../01.Micro.XS.421g' \n",
     "    # Open the HDF5 file based on the element\n",
     "    filename = f\"micro_{elementDict[element]}__{temp}K.h5\"\n",
     "    with h5py.File(micro_XS_path + '/' + filename, 'r') as f:\n",
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
     "    'B11':  'B_011'\n",
     "    }\n",
     "    # Path to microscopic cross section data:\n",
-    "    micro_XS_path = '../01.Micro_Python'\n",
+    "    micro_XS_path = '../01.Micro.XS.421g' \n",
     "    # Open the HDF5 file based on the element\n",
     "    filename = f\"micro_{elementDict[element]}__{temp}K.h5\"\n",
     "    with h5py.File(micro_XS_path + '/' + filename, 'r') as f:\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
     "    initPWR_like()\n",
     "\n",
     "# Path to microscopic cross section data:\n",
-    "micro_XS_path = '../01.Micro_Python'                                # INPUT\n",
+    "micro_XS_path = '../01.Micro.XS.421g'                               # INPUT\n",
     "\n",
     "# # Load HDF5 files for H2O and B isotopes\n",
     "hdf5_H01 = h5py.File(micro_XS_path + '/micro_H_001__600K.h5', 'r')  # INPUT\n",
@@ -858,6 +858,52 @@
     "# Change the units of number density from 1/(barn*cm) to 1/cm2\n",
     "H2OB['numDen'] = H2OB['numDen']*1e24\n",
     "\n",
+    "# Round the data according to the initial accuracy of the ENDF data\n",
+    "nRows = H2OB[\"numDen\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    H2OB[\"numDen\"][i] = \"%12.5e\" % H2OB[\"numDen\"][i]\n",
+    "\n",
+    "num_rows, num_cols = H2OB[\"sig0\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        H2OB[\"sig0\"][i, j] = \"%13.6e\" % H2OB[\"sig0\"][i, j]\n",
+    "\n",
+    "nRows = H2OB[\"SigC\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    H2OB[\"SigC\"][i] = \"%13.6e\" % H2OB[\"SigC\"][i]\n",
+    "\n",
+    "#nRows = H2OB[\"SigL\"].shape[0]\n",
+    "#for i in range(nRows):\n",
+    "#    H2OB[\"SigL\"][i] = \"%13.6e\" % H2OB[\"SigL\"][i]\n",
+    "\n",
+    "#nRows = H2OB[\"SigF\"].shape[0]\n",
+    "#for i in range(nRows):\n",
+    "#    H2OB[\"SigF\"][i] = \"%13.6e\" % H2OB[\"SigF\"][i]\n",
+    "\n",
+    "#num_rows, num_cols = H2OB[\"SigP\"].shape\n",
+    "#for i in range(num_rows):\n",
+    "#    for j in range(num_cols):\n",
+    "#        H2OB[\"SigP\"][i, j] = \"%13.6e\" % H2OB[\"SigP\"][i, j]    \n",
+    "\n",
+    "num_rows, num_cols = H2OB[\"Sig2\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        H2OB[\"Sig2\"][i, j] = \"%13.6e\" % H2OB[\"Sig2\"][i, j]   \n",
+    "\n",
+    "nRows = H2OB[\"SigT\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    H2OB[\"SigT\"][i] = \"%13.6e\" % H2OB[\"SigT\"][i]\n",
+    "\n",
+    "num_rows, num_cols = H2OB[\"SigS\"][\"SigS[0]\"].shape\n",
+    "for k in range(len(H2OB[\"SigS\"].keys())):\n",
+    "    for i in range(num_rows):\n",
+    "        for j in range(num_cols):\n",
+    "            H2OB[\"SigS\"][f\"SigS[{k}]\"][i, j] = \"%13.6e\" % H2OB[\"SigS\"][f\"SigS[{k}]\"][i, j]  \n",
+    "\n",
+    "# nRows = H2OB[\"chi\"].shape[0]\n",
+    "# for i in range(nRows):\n",
+    "#     H2OB[\"chi\"][i] = \"%13.6e\" % H2OB[\"chi\"][i]\n",
+    "\n",
     "# Finally create the file with macroscopic cross sections\n",
     "writeMacroXS(H2OB, matName)\n",
     "\n",
@@ -870,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -886,6 +932,26 @@
    ],
    "source": [
     "H2OB.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H2OB[\"SigP\"]"
    ]
   },
   {
@@ -912,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
