--- a/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
@@ -653,7 +653,7 @@
     "    'B11':  'B_011'\n",
     "    }\n",
     "    # Path to microscopic cross section data:\n",
-    "    micro_XS_path = '../01.Micro_Python'\n",
+    "    micro_XS_path = '../01.Micro.XS.421g' \n",
     "    # Open the HDF5 file based on the element\n",
     "    filename = f\"micro_{elementDict[element]}__{temp}K.h5\"\n",
     "    with h5py.File(micro_XS_path + '/' + filename, 'r') as f:\n",
@@ -1036,6 +1036,7 @@
     "UO2_03[\"por\"] = por*100\n",
     "UO2_03[\"molEnrich\"] = molEnrich*100\n",
     "\n",
+    "# Round the data according to the initial accuracy of the ENDF data\n",
     "nRows = UO2_03[\"numDen\"].shape[0]\n",
     "for i in range(nRows):\n",
     "    UO2_03[\"numDen\"][i] = \"%12.5e\" % UO2_03[\"numDen\"][i]\n",
@@ -1107,67 +1108,6 @@
    "source": [
     "print(UO2_03.keys())\n",
     "print(UO2_03[\"SigF\"].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nRows = UO2_03[\"numDen\"].shape[0]\n",
-    "for i in range(nRows):\n",
-    "    UO2_03[\"numDen\"][i] = \"%12.5e\" % UO2_03[\"numDen\"][i]\n",
-    "\n",
-    "num_rows, num_cols = UO2_03[\"sig0\"].shape\n",
-    "for i in range(num_rows):\n",
-    "    for j in range(num_cols):\n",
-    "        UO2_03[\"sig0\"][i, j] = \"%13.6e\" % UO2_03[\"sig0\"][i, j]\n",
-    "\n",
-    "nRows = UO2_03[\"SigC\"].shape[0]\n",
-    "for i in range(nRows):\n",
-    "    UO2_03[\"SigC\"][i] = \"%13.6e\" % UO2_03[\"SigC\"][i]\n",
-    "\n",
-    "nRows = UO2_03[\"SigL\"].shape[0]\n",
-    "for i in range(nRows):\n",
-    "    UO2_03[\"SigL\"][i] = \"%13.6e\" % UO2_03[\"SigL\"][i]\n",
-    "\n",
-    "nRows = UO2_03[\"SigF\"].shape[0]\n",
-    "for i in range(nRows):\n",
-    "    UO2_03[\"SigF\"][i] = \"%13.6e\" % UO2_03[\"SigF\"][i]\n",
-    "\n",
-    "num_rows, num_cols = UO2_03[\"SigP\"].shape\n",
-    "for i in range(num_rows):\n",
-    "    for j in range(num_cols):\n",
-    "        UO2_03[\"SigP\"][i, j] = \"%13.6e\" % UO2_03[\"SigP\"][i, j]    \n",
-    "\n",
-    "num_rows, num_cols = UO2_03[\"Sig2\"].shape\n",
-    "for i in range(num_rows):\n",
-    "    for j in range(num_cols):\n",
-    "        UO2_03[\"Sig2\"][i, j] = \"%13.6e\" % UO2_03[\"Sig2\"][i, j]   \n",
-    "\n",
-    "nRows = UO2_03[\"SigT\"].shape[0]\n",
-    "for i in range(nRows):\n",
-    "    UO2_03[\"SigT\"][i] = \"%13.6e\" % UO2_03[\"SigT\"][i]\n",
-    "\n",
-    "num_rows, num_cols = UO2_03[\"SigS\"][\"SigS[0]\"].shape\n",
-    "for k in range(len(UO2_03[\"SigS\"].keys())):\n",
-    "    for i in range(num_rows):\n",
-    "        for j in range(num_cols):\n",
-    "            UO2_03[\"SigS\"][f\"SigS[{k}]\"][i, j] = \"%13.6e\" % UO2_03[\"SigS\"][f\"SigS[{k}]\"][i, j]  \n",
-    "\n",
-    "nRows = UO2_03[\"chi\"].shape[0]\n",
-    "for i in range(nRows):\n",
-    "    UO2_03[\"chi\"][i] = \"%13.6e\" % UO2_03[\"chi\"][i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ans = UO2_03[\"SigS\"][\"SigS[0]\"]"
    ]
   },
   {
