--- a/ReactorPhysics_Python/02.Macro.XS.421g/testZry.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testZry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
     "    'B11':  'B_011'\n",
     "    }\n",
     "    # Path to microscopic cross section data:\n",
-    "    micro_XS_path = '../01.Micro_Python'\n",
+    "    micro_XS_path = '../01.Micro.XS.421g' \n",
     "    # Open the HDF5 file based on the element\n",
     "    filename = f\"micro_{elementDict[element]}__{temp}K.h5\"\n",
     "    with h5py.File(micro_XS_path + '/' + filename, 'r') as f:\n",
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
     "    'B11':  'B_011'\n",
     "    }\n",
     "    # Path to microscopic cross section data:\n",
-    "    micro_XS_path = '../01.Micro_Python'\n",
+    "    micro_XS_path = '../01.Micro.XS.421g' \n",
     "    # Open the HDF5 file based on the element\n",
     "    filename = f\"micro_{elementDict[element]}__{temp}K.h5\"\n",
     "    with h5py.File(micro_XS_path + '/' + filename, 'r') as f:\n",
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
     "            '',\n",
     "            'Macroscopic cross sections for water solution of boric acid',\n",
     "            f'Zry temperature:    {s_struct[\"temp\"]:.1f} K',\n",
-    "            f'Zry density:        {s_struct[\"den\"]:.5f} g/cm3',\n",
+    "            f'Zry density:        {s_struct[\"den\"]:.5f} g/cm3'\n",
     "        ]\n",
     "\n",
     "        # Write the header as attributes of the root group\n",
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
     "molFrZr = np.array([0.5145, 0.1122, 0.1715, 0.1738, 0.0280])\n",
     "\n",
     "# Path to microscopic cross section data:\n",
-    "micro_XS_path = '../01.Micro_Python'                                # INPUT\n",
+    "micro_XS_path = '../01.Micro.XS.421g'                                # INPUT\n",
     "\n",
     "# Call the functions for Zr isotopes and store the data in the structures.\n",
     "# As an example it is done below for 600K, change when other temperatures needed:\n",
@@ -1013,6 +1013,52 @@
     "# Change the units of number density from 1/(barn*cm) to 1/cm2\n",
     "Zry['numDen'] = Zry['numDen']*1e24\n",
     "\n",
+    "# Round the data according to the initial accuracy of the ENDF data\n",
+    "nRows = Zry[\"numDen\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    Zry[\"numDen\"][i] = \"%12.5e\" % Zry[\"numDen\"][i]\n",
+    "\n",
+    "num_rows, num_cols = Zry[\"sig0\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        Zry[\"sig0\"][i, j] = \"%13.6e\" % Zry[\"sig0\"][i, j]\n",
+    "\n",
+    "nRows = Zry[\"SigC\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    Zry[\"SigC\"][i] = \"%13.6e\" % Zry[\"SigC\"][i]\n",
+    "\n",
+    "#nRows = Zry[\"SigL\"].shape[0]\n",
+    "#for i in range(nRows):\n",
+    "#    Zry[\"SigL\"][i] = \"%13.6e\" % Zry[\"SigL\"][i]\n",
+    "\n",
+    "#nRows = Zry[\"SigF\"].shape[0]\n",
+    "#for i in range(nRows):\n",
+    "#    Zry[\"SigF\"][i] = \"%13.6e\" % Zry[\"SigF\"][i]\n",
+    "\n",
+    "#num_rows, num_cols = Zry[\"SigP\"].shape\n",
+    "#for i in range(num_rows):\n",
+    "#    for j in range(num_cols):\n",
+    "#        Zry[\"SigP\"][i, j] = \"%13.6e\" % Zry[\"SigP\"][i, j]    \n",
+    "\n",
+    "num_rows, num_cols = Zry[\"Sig2\"].shape\n",
+    "for i in range(num_rows):\n",
+    "    for j in range(num_cols):\n",
+    "        Zry[\"Sig2\"][i, j] = \"%13.6e\" % Zry[\"Sig2\"][i, j]   \n",
+    "\n",
+    "nRows = Zry[\"SigT\"].shape[0]\n",
+    "for i in range(nRows):\n",
+    "    Zry[\"SigT\"][i] = \"%13.6e\" % Zry[\"SigT\"][i]\n",
+    "\n",
+    "num_rows, num_cols = Zry[\"SigS\"][\"SigS[0]\"].shape\n",
+    "for k in range(len(Zry[\"SigS\"].keys())):\n",
+    "    for i in range(num_rows):\n",
+    "        for j in range(num_cols):\n",
+    "            Zry[\"SigS\"][f\"SigS[{k}]\"][i, j] = \"%13.6e\" % Zry[\"SigS\"][f\"SigS[{k}]\"][i, j]  \n",
+    "\n",
+    "# nRows = Zry[\"chi\"].shape[0]\n",
+    "# for i in range(nRows):\n",
+    "#     Zry[\"chi\"][i] = \"%13.6e\" % Zry[\"chi\"][i]\n",
+    "\n",
     "# Finally create the file with macroscopic cross sections\n",
     "writeMacroXS(Zry, matName)\n",
     "\n",
@@ -1022,6 +1068,23 @@
     "hdf5_ZR92.close()\n",
     "hdf5_ZR94.close()\n",
     "hdf5_ZR96.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['ng', 'temp', 'eg', 'aw', 'den', 'isoName', 'numDen', 'sig0', 'SigC', 'SigL', 'Sig2', 'SigT', 'SigS', 'nFis', 'SigP'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Zry.keys())"
    ]
   }
  ],
@@ -1041,7 +1104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
