--- a/ReactorPhysics_Python/02.Macro.XS.421g/testH2OB.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testH2OB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -787,25 +787,35 @@
     "    sigLtab[i, :size, col_start:col_start+421] = sigL_data.reshape(size, 421)\n",
     "\n",
     "sigC, sigL = np.zeros((4, H2OB['ng'])), np.zeros((4, H2OB['ng']))\n",
-    "\n",
+    "logslist = []\n",
     "for ig in range(H2OB['ng']):\n",
     "    # Number of isotopes in the mixture\n",
     "    nIso = len(aDen)\n",
     "    # Loop over isotopes\n",
     "    for iIso in range(nIso):\n",
     "        # Find cross sections for the found sigma-zeros\n",
-    "        if len(sig0tab[iIso]) == 1:\n",
+    "        if len(sig0tab[iIso][np.nonzero(sig0tab[iIso])]) == 1:\n",
     "            sigC[iIso, ig] = sigCtab[iIso][0, ig]\n",
     "            sigL[iIso, ig] = sigLtab[iIso][0, ig]\n",
     "        else:\n",
     "            log10sig0 = min(10, max(0, np.log10(H2OB['sig0'][iIso, ig])))\n",
+    "            #logslist.append(log10sig0)\n",
     "            arrayLength = len(sig0tab[iIso][np.nonzero(sig0tab[iIso])])\n",
     "            x = np.log10(sig0tab[iIso][:arrayLength])\n",
+    "            logslist.append(x)\n",
     "            y_sigC = sigCtab[iIso][:arrayLength, ig]\n",
     "            y_sigL = sigLtab[iIso][:arrayLength, ig]\n",
     "\n",
-    "            temp_sigC = np.interp(log10sig0, x, y_sigC)\n",
-    "            temp_sigL = np.interp(log10sig0, x, y_sigL)\n",
+    "            #temp_sigC = np.interp(log10sig0, x, y_sigC)\n",
+    "            #temp_sigL = np.interp(log10sig0, x, y_sigL)\n",
+    "\n",
+    "            # SciPy approach\n",
+    "            interp_sigC = sp.interpolate.interp1d(x, y_sigC)\n",
+    "            interp_sigL = sp.interpolate.interp1d(x, y_sigL)\n",
+    "            #\n",
+    "            temp_sigC = interp_sigC(log10sig0)\n",
+    "            temp_sigL = interp_sigL(log10sig0)\n",
+    "\n",
     "            if np.isnan(temp_sigC) or np.isnan(temp_sigL):\n",
     "                # If any of the interpolated values is NaN, replace the entire row with non-zero elements\n",
     "                nonzero_indices = np.nonzero(sigCtab[iIso][:arrayLength, ig])\n",
@@ -916,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +935,7 @@
        "dict_keys(['temp', 'p', 'bConc', 'eg', 'ng', 'aw', 'den', 'isoName', 'numDen', 'sig0', 'SigC', 'SigL', 'Sig2', 'SigT', 'SigS', 'SigP'])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +955,7 @@
        "[0.0]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,10 +966,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6843555171733"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(10, max(0, np.log10(H2OB['sig0'][0, 0])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sig0tab[0][np.nonzero(sig0tab[0])])"
+   ]
   }
  ],
  "metadata": {
@@ -978,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
