--- a/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testUO2_03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,13 @@
       "File 'micro_O_016__900K.h5' has been read in.\n",
       "Sigma-zero iterations. \n",
       "Done.\n",
-      "Interpolation of microscopic cross sections for the found sigma-zeros.\n",
+      "Interpolation of microscopic cross sections for the found sigma-zeros.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Done.\n",
       "Write macroscopic cross sections to the file: macro421_UO2_03__900K.h5\n",
       "Done.\n"
@@ -955,7 +961,7 @@
     "    # Loop over isotopes\n",
     "    for iIso in range(nIso):\n",
     "        # Find cross sections for the found sigma-zeros\n",
-    "        if len(sig0tab[iIso]) == 1:\n",
+    "        if len(sig0tab[iIso][np.nonzero(sig0tab[iIso])]) == 1:\n",
     "            sigC[iIso, ig] = sigCtab[iIso][0, ig]\n",
     "            sigL[iIso, ig] = sigLtab[iIso][0, ig]\n",
     "            sigF[iIso, ig] = sigFtab[iIso][0, ig]\n",
@@ -1093,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1101,18 +1107,24 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['ng', 'temp', 'eg', 'aw', 'den', 'isoName', 'numDen', 'sig0', 'SigC', 'SigL', 'SigF', 'SigP', 'Sig2', 'SigT', 'SigS', 'chi', 'por', 'molEnrich'])\n",
-      "(1, 421)\n"
+      "[[1.298771e+04 5.616246e+03 3.948475e+03 ... 2.126227e+00 2.131438e+00\n",
+      "  2.051408e+00]\n",
+      " [3.493888e-04 1.512628e-04 1.064901e-04 ... 1.237511e+00 1.308572e+00\n",
+      "  1.334558e+00]\n",
+      " [0.000000e+00 0.000000e+00 0.000000e+00 ... 0.000000e+00 0.000000e+00\n",
+      "  0.000000e+00]]\n"
      ]
     }
    ],
    "source": [
     "print(UO2_03.keys())\n",
-    "print(UO2_03[\"SigF\"].shape)"
+    "#print(UO2_03[\"SigF\"])\n",
+    "print(sigF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1121,16 +1133,16 @@
      "text": [
       "1.0430999999999998e-23\n",
       "6.281699063797394\n",
-      "0.023269827400668696\n"
+      "0.023269825720908948\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array(269.95039351)"
+       "array(269.950413)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,6 +1157,142 @@
     "\n",
     "print(rho)\n",
     "UO2_03[\"aw\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0006980947716272684\n",
+      "0.02257173094928168\n",
+      "0.046539651441817896\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(aDen[0])\n",
+    "print(aDen[1])\n",
+    "print(aDen[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'np.savetxt(\"SigP_Python.csv\", UO2_03[\"SigP\"], delimiter=\",\")\\nnp.savetxt(\"Sig2_Python.csv\", UO2_03[\"Sig2\"], delimiter=\",\")\\nnp.savetxt(\"sigF_Python.csv\", sigF, delimiter=\",\")\\n'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"np.savetxt(\"SigP_Python.csv\", UO2_03[\"SigP\"], delimiter=\",\")\n",
+    "np.savetxt(\"Sig2_Python.csv\", UO2_03[\"Sig2\"], delimiter=\",\")\n",
+    "np.savetxt(\"sigF_Python.csv\", sigF, delimiter=\",\")\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'micro_U_235__900K.h5' has been read in.\n",
+      "File 'micro_U_238__900K.h5' has been read in.\n",
+      "File 'micro_O_016__900K.h5' has been read in.\n",
+      "269.950413\n",
+      "235.0439\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Path to microscopic cross section data:\n",
+    "micro_XS_path = '../01.Micro.XS.421g/'  \n",
+    "\n",
+    "# Call the functions for UO2 isotopes and store the data in the structures.\n",
+    "# As an example it is done below for temperature of 900 K.\n",
+    "# Change when other parameters needed.\n",
+    "hdf5_U235 = h5py.File(micro_XS_path + '/micro_U_235__900K.h5', 'r') # INPUT\n",
+    "print(f\"File 'micro_U_235__900K.h5' has been read in.\")\n",
+    "hdf5_U238 = h5py.File(micro_XS_path + '/micro_U_238__900K.h5', 'r') # INPUT\n",
+    "print(f\"File 'micro_U_238__900K.h5' has been read in.\")\n",
+    "hdf5_O16  = h5py.File(micro_XS_path + '/micro_O_016__900K.h5', 'r') # INPUT\n",
+    "print(f\"File 'micro_O_016__900K.h5' has been read in.\")\n",
+    "\n",
+    "print(hdf5_U235.attrs.get('aw')*molFrU[0] + hdf5_U238.attrs.get('aw')*molFrU[1] + hdf5_O16 .attrs.get('aw')*2.0)\n",
+    "print(hdf5_U235.attrs.get('aw'))\n",
+    "# Close the HDF5 files\n",
+    "hdf5_U235.close()\n",
+    "hdf5_U238.close()\n",
+    "hdf5_O16.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of matching digits: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_matching_digits(number1, number2):\n",
+    "    str_number1 = str(number1)\n",
+    "    str_number2 = str(number2)\n",
+    "    min_length = min(len(str_number1), len(str_number2))\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in range(min_length):\n",
+    "        if str_number1[i] == str_number2[i]:\n",
+    "            count += 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Test the function\n",
+    "num1 = fuel[\"rho\"] * 1e-3 * (1 - por) / 1.660538e-24     \n",
+    "num2 = 193827456\n",
+    "matching_digits_count = count_matching_digits(num1, num2)\n",
+    "print(\"Number of matching digits:\", matching_digits_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.28169906379739"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6.28169906379739"
    ]
   }
  ],
@@ -1164,7 +1312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
