--- a/ReactorPhysics_Python/02.Macro.XS.421g/testZry.ipynb
+++ b/ReactorPhysics_Python/02.Macro.XS.421g/testZry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,13 @@
       "File 'micro_ZR092__600K.h5' has been read in.\n",
       "File 'micro_ZR094__600K.h5' has been read in.\n",
       "File 'micro_ZR096__600K.h5' has been read in.\n",
-      "Sigma-zero iterations.\n",
+      "Sigma-zero iterations.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Done.\n",
       "Interpolation of microscopic cross sections for the found sigma-zeros. \n",
       "Done.\n",
@@ -945,7 +951,7 @@
     "    # Loop over isotopes\n",
     "    for iIso in range(nIso):\n",
     "        # Find cross sections for the found sigma-zeros\n",
-    "        if len(sig0tab[iIso]) == 1:\n",
+    "        if len(sig0tab[iIso][np.nonzero(sig0tab[iIso])]) == 1:\n",
     "            sigC[iIso, ig] = sigCtab[iIso][0, ig]\n",
     "            sigL[iIso, ig] = sigLtab[iIso][0, ig]\n",
     "        else:\n",
@@ -957,6 +963,14 @@
     "\n",
     "            temp_sigC = np.interp(log10sig0, x, y_sigC)\n",
     "            temp_sigL = np.interp(log10sig0, x, y_sigL)\n",
+    "\n",
+    "            # SciPy approach\n",
+    "            interp_sigC = sp.interpolate.interp1d(x, y_sigC)\n",
+    "            interp_sigL = sp.interpolate.interp1d(x, y_sigL)\n",
+    "            #\n",
+    "            temp_sigC = interp_sigC(log10sig0)\n",
+    "            temp_sigL = interp_sigL(log10sig0)\n",
+    "\n",
     "            if np.isnan(temp_sigC) or np.isnan(temp_sigL):\n",
     "                # If any of the interpolated values is NaN, replace the entire row with non-zero elements\n",
     "                nonzero_indices = np.nonzero(sigCtab[iIso][:arrayLength, ig])\n",
@@ -1072,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
